syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package qcdn.nodes;

service QcdnNodes {
	rpc ConnectNode(ConnectionRequest) returns (stream Sync);
}

message ConnectionRequest {
	string ip_addr_v4 = 1;
	string url = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message Sync {
	string id = 1;
}
